[package]
name = "solana-rpc-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
envy = "0.4"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.2", features = ["full"] }
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
