[package]
name = "solana-rpc-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
brotli = "3"
bytes = "1"
dotenvy = "0.15"
envy = "0.4"
flate2 = "1.0"
fly-accept-encoding = "0.2.0"
futures = "0.3"
http = "0.2"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.2", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = [ "gzip", "brotli", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
zstd = "0.12"
